* Convert stats, derived stats, gifts and meta-talents to sheet worker scripts

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
@@ -150,6 +150,31 @@ input[type=number]::-webkit-outer-spin-button {
     font-weight: bold;
 }
 
+.charsheet input[type="text"]:read-only,
+.charsheet input[type="number"]:read-only {
+    background-color: #bf9e60;
+    border-style: solid;
+    border-color: #806940;
+    border-width: 0.1em;
+    font-weight: bold;
+}
+
+.charsheet input[type="number"]:-moz-read-only {
+    background-color: #bf9e60;
+    border-style: solid;
+    border-color: #806940;
+    border-width: 0.1em;
+    font-weight: bold;
+}
+
+.charsheet input[type="text"]:-moz-read-only {
+    background-color: #bf9e60;
+    border-style: solid;
+    border-color: #806940;
+    border-width: 0.1em;
+    font-weight: bold;
+}
+
 .charsheet .sheet-activation-items input[type="checkbox"] {
     margin: 0.1em 0.3em 0.1em 0em;
 }
@@ -227,6 +252,28 @@ The solution: convert the <input>s to type="text" and make them look like normal
     vertical-align: bottom;
 }
 
+.charsheet input[type="text"]:read-only.sheet-stat-immutable {
+    background-color: #e6be74;
+    border-style: hidden;
+    box-shadow: none;
+    cursor: auto;
+    font-family: serif;
+    padding: 0;
+    width: 2.5em;
+    vertical-align: bottom;
+}
+
+.charsheet input[type="text"]:-moz-read-only.sheet-stat-immutable {
+    background-color: #e6be74;
+    border-style: hidden;
+    box-shadow: none;
+    cursor: auto;
+    font-family: serif;
+    padding: 0;
+    width: 2.5em;
+    vertical-align: bottom;
+}
+
 .charsheet input[type="text"]:disabled.sheet-stat-immutable-version {
     width: 7em;
 }
@@ -236,9 +283,25 @@ The solution: convert the <input>s to type="text" and make them look like normal
     text-align: left;
 }
 
+.charsheet th > input[type="text"]:read-only.sheet-stat-immutable {
+    text-align: left;
+}
+
+.charsheet th > input[type="text"]:-moz-read-only.sheet-stat-immutable {
+    text-align: left;
+}
+
 /* Align text right to match other table cells */
 .charsheet td > input[type="text"]:disabled.sheet-stat-immutable {
-    text-align: right;
+    text-align: center;
+}
+
+.charsheet td > input[type="text"]:read-only.sheet-stat-immutable {
+    text-align: center;
+}
+
+.charsheet td > input[type="text"]:-moz-read-only.sheet-stat-immutable {
+    text-align: center;
 }
 
 /* Style draggable UI buttons */
@@ -460,7 +523,8 @@ The solution: convert the <input>s to type="text" and make them look like normal
 .charsheet input.sheet-tab83:checked ~ div.sheet-section-Orte,
 .charsheet input.sheet-tab10:checked ~ div.sheet-section-config,
 .charsheet input.sheet-tab101:checked ~ div.sheet-section-config1,
-.charsheet input.sheet-tab102:checked ~ div.sheet-section-config2 {
+.charsheet input.sheet-tab102:checked ~ div.sheet-section-config2,
+.charsheet input.sheet-tab11:checked ~ div.sheet-section-info {
     border-color: #806940;
     border-style: solid;
     border-width: 0.2em 0 0.2em 0;
@@ -529,7 +593,8 @@ The solution: convert the <input>s to type="text" and make them look like normal
 .charsheet input.sheet-tab99:checked + span.sheet-tab99,
 .charsheet input.sheet-tab10:checked + span.sheet-tab10,
 .charsheet input.sheet-tab101:checked + span.sheet-tab101,
-.charsheet input.sheet-tab102:checked + span.sheet-tab102 {
+.charsheet input.sheet-tab102:checked + span.sheet-tab102,
+.charsheet input.sheet-tab11:checked + span.sheet-tab11 {
     background-color: #bf9e60;
     border-color: #806940;
     color: #000000;
@@ -1485,4 +1550,3 @@ The solution: convert the <input>s to type="text" and make them look like normal
     font-weight: inherit;
     color: #000000;
 }
-
