* Use a new name for the gifts repeating section * Use previous name for old data * Update scripts accordingly * Move old repeating section to new tab "Infos" 	* Inform users about the change(s) 	* Keep old repeating section so users do not lose any data and can manually fix errors introduced during automatic migration

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
@@ -66,6 +66,10 @@ Confirmed Critical Failure: #b39797 (a red)
     display: none;
 }
 
+.charsheet .sheet-section-info * {
+	text-align: left;
+}
+
 /* Headings */
 .charsheet h1,
 .charsheet h2,
@@ -173,6 +177,20 @@ input[type=number]::-webkit-outer-spin-button {
     border-color: #806940;
     border-width: 0.1em;
     font-weight: bold;
+}
+
+/* Selectable text has to go into <input> */
+.charsheet input[type="text"].sheet-selectable-text {
+    background-color: inherit;
+    border: none;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: inherit;
+    padding-bottom: inherit;
 }
 
 .charsheet .sheet-activation-items input[type="checkbox"] {
