BTATOW More playing around with CSS and styling.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -15,22 +15,22 @@ input.sheet-tab4:checked ~ div.sheet-tab4 {
     min-width: 800px;
 }
 
-.sheet-skills span {
-    align-items: center;
-    align-self: end;
-    flex: fit-content;
+.sheet-skills-container {
+    max-height: 30px;
 }
 
-.sheet-skills select {
-    border-top: none;
-    border-left: none;
-    border-right: none;
+.sheet-skills {
+    border-style: none none solid;
+    border-width: thin;
 }
 
-.sheet-skills input {
-    border-top: none;
-    border-left: none;
-    border-right: none;
+.sheet-skills-labels {
+    bottom: 0px;
+    display: inline-block;
+    margin-left: 1px;
+    margin-right: 1px;
+    position: relative;
+    text-align: center;
 }
 
 @font-face {
@@ -70,19 +70,16 @@ input.sheet-tab {
 
 input.sheet-tab::before {
     content: attr(title);
-
     border: solid 1px #a8a8a8;
     border-bottom-color: black;
     text-align: center;
     display: inline-block;
-
     background: #fff;
     background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-
     width: 150px;
     height: 20px;
     font-size: 18px;
@@ -101,7 +98,6 @@ input.sheet-tab:checked::before {
 input.sheet-tab:not(:first-child)::before {
     border-left: none;
 }
-
 
 div.sheet-tab-content {
     border: 1px solid #a8a8a8;
