--- a/CWOD-V20/V20.css
+++ b/CWOD-V20/V20.css
@@ -961,8 +961,8 @@ input.sheet-speedoutput {
 
 /*------------- This is the roll template for standard rolls -------------*/
 .sheet-rolltemplate-wod .sheet-regularContainer {
-    width: 100%;
-    height: 100%;
+    width: 230px;
+    height: 190px;
     padding: 2px;
     background: url(https://i.imgur.com/puo0z7r.png) top left;
     background-size: 100% 100%;
@@ -1020,8 +1020,8 @@ input.sheet-speedoutput {
 
 /*------------- This is the roll template for initiative -------------*/
 .sheet-rolltemplate-wodinitiative .sheet-initiativeContainer {
-    width: 100%;
-    height: 100%;
+    width: 230px;
+    height: 190px;
     padding: 2px;
     background: url(https://i.imgur.com/puo0z7r.png) top left;
     background-size: 100% 100%;
@@ -1079,8 +1079,8 @@ input.sheet-speedoutput {
 /*------------- This is the roll template for rituals -------------*/
 
 .sheet-rolltemplate-wodritual .sheet-ritualcontainer {
-    width: 100%;
-    height: 100%;
+    width: 230px;
+    height: 375px;
     padding: 2px;
     background: url(https://i.imgur.com/puo0z7r.png) top left;
     background-size: 100% 100%;
