Starfinder by Roll20 v1.001556629200
# Changelog
## Bug Fixes
- Grenades shouldn't have had the option of being specialized.
- Missing end brackets in NPC rolls were causing syntax errors in roll templates
- NPCs weren't accepting dashes as valid ability mods
- Mod Wizard was missing several options
- Luck bonuses should not have been stackable by RAW. (This will only update the stackable buffs textarea)
- The miscellaneous bonus field on attacks (@{bonus}) was not affecting the attack total

--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -2449,6 +2449,10 @@ input[type=checkbox].sheet-class-spells:checked + .sheet-spellclass-container,
 .sheet-is-caster:not(:checked) + input.sheet-spells{
     display:none !important;
 }
+.sheet-invalid-detector[value="0[-]"] ~ .sheet-modified-attr:not(.sheet-invalid-display),
+.sheet-invalid-detector:not([value="0[-]"]) ~ .sheet-invalid-display{
+    opacity:0;
+}
 .sheet-starfinder > .sheet-container.sheet-npc{
     grid-template-columns:[statblock-start] minmax(300px,1fr) [statblock-end creator-start] minmax(300px,1fr) [creator-end];
     grid-template-rows:[statblock-start creator-start] auto [statblock-end creator-end];
