--- a/Lost West Media/LWM_StatTracker.css
+++ b/Lost West Media/LWM_StatTracker.css
@@ -1,7 +1,7 @@
 /*-----background-----*/
 
 .charsheet {
-    background-image: url("https://i.imgur.com/PxV1d2l.jpg");
+    background-image: url("https://i.imgur.com/HnSmiik.jpg");
     background-size: 100%;
     background-attachment: scroll;
     min-height: 100%;
@@ -16,8 +16,8 @@
     background-image: url("https://i.imgur.com/572YPfx.jpg");
     background-color: transparent;
     background-repeat: no-repeat;
-    width: 32px;
-    height: 32px;
+    width: 25px;
+    height: 25px;
 }
 button,
 button:hover,
@@ -46,8 +46,12 @@ h1 {
     color: yellow;
     font-weight: normal;
     text-align: center;
+    text-shadow: white;
+    border: 1px solid #5E9AED; 
+    border-radius: 5px; 
+    box-shadow: 0 0 5px 3px #0064EE;
     margin: 5px;
-    "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 }
 h2 {
     color: yellow;
@@ -1128,7 +1132,7 @@ input.sheet-arrow:checked ~ div.sheet-body {
 }
 
 .sheet-rolltemplate-pow .inlinerollresult.importantroll {
-	border: 2px solid #4A57ED;
+	border: 2px solid yellow;
 }
 .sheet-rolltemplate-pre table {
     width: 150px;
@@ -1187,7 +1191,7 @@ input.sheet-arrow:checked ~ div.sheet-body {
 	min-height: 150px;
 }
 .sheet-rolltemplate-score th {
-    color: white;
+    color: #c2c200;
     padding-left: 1px;
     line-height: 1.2em;
     font-size: 1.2em;
@@ -1227,11 +1231,10 @@ input.sheet-arrow:checked ~ div.sheet-body {
 }
 .sheet-rolltemplate-item table {
     width: 150px;
-    padding: 2px;
 	background:url (https://i.imgur.com/Ll18XuB.gif);
 	background-size: 150px;
     background-repeat: no-repeat;
-	font-family: "Andale Mono", AndaleMono, monospace;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 	min-height: 150px;
 }
 .sheet-rolltemplate-item th {
@@ -1248,10 +1251,9 @@ input.sheet-arrow:checked ~ div.sheet-body {
 .sheet-rolltemplate-item td {
     text-align: center;
 	color: #9e0b0f;
-	line-height: 2em;
+	line-height: 1.2em;
 	font-size: 1.2em;
-	padding-left: 5px;
-	padding-bottom: 35px;
+	padding-top:70px;
 }
 
 .sheet-rolltemplate-item .inlinerollresult  {
@@ -1276,27 +1278,28 @@ input.sheet-arrow:checked ~ div.sheet-body {
 .sheet-rolltemplate-powerup table {
     width: 240px;
     padding: 2px;
-    border: 1px solid;
-	background:url (https://i.imgur.com/0Otlbnb.jpg);
+	background:url (https://github.com/LostWestMedia/LostWestMedia/blob/master/ControllerSB1.jpg);
 	background-size: 100%;
-	background-repeat: repeat;
-	border-bottom: 1px solid black;
-	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    background-repeat: no-repeat;
+	min-height: 240px;
 }
 .sheet-rolltemplate-powerup th {
     color: #F6C100;
     padding-left: 5px;
-    line-height: 1.6em;
-    font-size: 1.2em;
+    border-style: none;
+    line-height: 1.2em;
+    font-size: 1em;
     text-align: left;
-    font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
     font-variant: small-caps;
     width: 180px;
 }
 
 .sheet-rolltemplate-powerup td {
-	padding: 5px;
-	color: #B4B4AC;
+	color: white;
+    padding-left: 5px;
+    border-collapse:collapse;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
 .sheet-rolltemplate-powerup .inlinerollresult  {
