[Ryuutama] Style fixes (#5014)
* [Ryuutama]: shifted info around for clarity

* [Ryuutama]: more reorder/moving things around

* [Ryuutama]: changed spells and restyled tabs

* [Ryuutama]: switching image url and adding space on freetext rolls

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -4,7 +4,7 @@
 }
 
 * {
-    font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', cursive;*/
+    font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', cursive;
 }
 
 /*Start of NPC checkbox functionality*/
@@ -409,13 +409,14 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     color: white;
     padding: .25em 20px;
     font-size: 1.2em;
+    margin-bottom: 3px;
     border-spacing: 0;
     text-align: center;
-    background: url(https://imgur.com/7OUDTUg.png) top left;
+    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ryuutama/images/rollTemplate_rollTitle_bookEnds.png) top left;
     background-repeat: repeat-y;
     min-height: 10px;
     background-size: 100% 34px;
-    font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;*/
+    font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
 }
 
 /* Colors for the rolltemplate title */
@@ -442,8 +443,6 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
 .sheet-rolltemplate-skillCheck .sheet-rollResult,
 .sheet-rolltemplate-accuracyCheck .sheet-rollResult,
 .sheet-rolltemplate-oneDieCheck .sheet-rollResult{
-    /*margin-bottom: 5px;*/
-    /*margin-left: 5px;*/
     margin: 10px;
     vertical-align: top;
     text-decoration: none;
@@ -478,6 +477,10 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
 .sheet-rolltemplate-oneDieCheck .inlinerollresult {
     background-color: #fff;
     border: 2px solid #fff;
+}
+
+.sheet-rolltemplate-oneDieCheck .sheet-rollFreeText {
+    margin-left: 5px;
 }
 
 /*Styling that removes the box around roll buttons*/
