BTATOW More CSS tweaking.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -2,6 +2,10 @@ div.sheet-tab-content {
     display: none;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 input.sheet-tab1:checked ~ div.sheet-tab1,
 input.sheet-tab2:checked ~ div.sheet-tab2,
 input.sheet-tab3:checked ~ div.sheet-tab3,
@@ -15,21 +19,43 @@ input.sheet-tab4:checked ~ div.sheet-tab4 {
     min-width: 800px;
 }
 
+.sheet-skills-headings span {
+    font-weight: bold;
+}
+
 .sheet-skills-container {
+    align-items: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     max-height: 30px;
 }
 
 .sheet-skills {
+    border-color: #000000;
+    border-radius: 0;
     border-style: none none solid;
     border-width: thin;
+    margin: 0 2px;
+    padding: 0;
+}
+
+select.sheet-skills::-ms-expand {
+    display: none;
+}
+
+select.sheet-skills, input[type=number].sheet-skills {
+    height: auto;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+span.sheet-skills, input.sheet-skills, select.sheet-skills {
+    line-height: 1;
 }
 
 .sheet-skills-labels {
-    bottom: 0px;
-    display: inline-block;
-    margin-left: 1px;
-    margin-right: 1px;
-    position: relative;
+    bottom: 0;
     text-align: center;
 }
 
