Let's try this again ...

--- a/UnofficialElderScrollsRPG/UESTRPG by EnricoDandolo CSS.css
+++ b/UnofficialElderScrollsRPG/UESTRPG by EnricoDandolo CSS.css
@@ -546,6 +546,7 @@ button[type=roll] * {
 .sheet-skill input[type=text],
 .sheet-ac-init-speed-container input,
 .sheet-hp input,
+.sheet-magicka input,
 .sheet-exhaustion input,
 .sheet-hdice-dsaves-container input[type=text],
 .sheet-hdice-dsaves-container input[type=number],
@@ -633,6 +634,7 @@ button[type=roll] * {
 .sheet-textbox-container .sheet-label span,
 .sheet-ac-init-speed-container span.sheet-label,
 .sheet-hp span,
+.sheet-magicka span,
 .sheet-exhaustion span.sheet-label,
 .sheet-hdice-dsaves-container span,
 .sheet-attacks span,
@@ -699,6 +701,11 @@ button[type=roll] * {
     display: none;
 }
 
+.sheet-magicka-toggle[value="0"] ~ .sheet-magicka,
+{
+	display: none;
+}
+
 .sheet-exhaustion input[type="number"]
 {
     width: 116px;
@@ -737,6 +744,7 @@ button[type=roll] * {
 .sheet-ac-init-speed-container,
 .sheet-hp,
 .sheet-exhaustion,
+.sheet-magicka,
 .sheet-hdice-dsaves-container,
 .sheet-attacks,
 .sheet-equipment
@@ -763,6 +771,7 @@ button[type=roll] * {
 }
 
 .sheet-hp,
+.sheet-magicka,
 .sheet-exhaustion,
 .sheet-subcontainer,
 .sheet-attacks,
@@ -772,7 +781,8 @@ button[type=roll] * {
     border-radius: 5px;
 }
 
-.sheet-hp input
+.sheet-hp input,
+.sheet-magicka input
 {
     font-size: 30px;
 }
@@ -783,6 +793,7 @@ button[type=roll] * {
 }
 
 .sheet-hp input[type="number"],
+.sheet-magicka input[type="number"]
 {
     width: 100%;
     padding-right: 10px;
@@ -790,6 +801,7 @@ button[type=roll] * {
 }
 
 .sheet-hp span.sheet-label,
+.sheet-magicka span .sheet-label,
 .sheet-exhuastion span .sheet-label,
 .sheet-hdice-dsaves-container span.sheet-label
 {
@@ -797,6 +809,7 @@ button[type=roll] * {
 }
 
 .sheet-hp .sheet-top span,
+.sheet-magicka .sheet-top span,
 .sheet-hdice-dsaves-container .sheet-top span,
 .sheet-attacks .sheet-top span,
 .sheet-tool_proficiencies .sheet-top span,
@@ -812,6 +825,7 @@ button[type=roll] * {
 }
 
 .sheet-hp .sheet-top input,
+.sheet-magicka .sheet-top input,
 .sheet-hdice-dsaves-container .sheet-top input[type=text]
 {
     border-bottom: 1px solid #D3D3D3;
@@ -1351,7 +1365,8 @@ button[type=roll] * {
 }
 
 .sheet-spell-level .sheet-total,
-.sheet-spell-level .sheet-expended {
+.sheet-spell-level .sheet-expended,
+.sheet-spell-level .sheet-cost {
     display: inline-block;
     border: 1px solid black;
     height: 25px;
@@ -1362,7 +1377,7 @@ button[type=roll] * {
 }
 
 .sheet-spell-level .sheet-total {
-    width: 114px;
+    width: 88px;
     vertical-align: bottom;
 }
 
@@ -1374,9 +1389,21 @@ button[type=roll] * {
 }
 
 .sheet-spell-level .sheet-expended {
-    width: 139px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
+    width: 114px;
+    border-radius: 0px;
+	vertical-align: bottom;
+}
+
+.sheet-spell-level .sheet-cost {
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+    font-size: 9px;
+    line-height: 12px;
+    width: 64px;
+    text-align: center;
+	position: relative;
+    font-weight: bold;
+
 }
 
 .sheet-spell {
