Starfinder by Roll20 v1.001556629200mk2
#Changelog
## Bug Fixes
- translation file was misformatted
- fix for html being injected into dropped equipment
- some fields changed to better handle large strings.

--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -2607,6 +2607,10 @@ input[type=checkbox].sheet-class-spells:checked + .sheet-spellclass-container,
 .sheet-statblock .repcontainer[data-groupname='repeating_spell']{
     width:100%;
 }
+.sheet-attr-total-container {
+    overflow: hidden;
+    white-space: nowrap;
+}
 .sheet-statblock .sheet-field-container .sheet-attr-total-container{
     width:40px;
     position:relative;
