--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -2607,7 +2607,7 @@ input[type=checkbox].sheet-class-spells:checked + .sheet-spellclass-container,
 .sheet-statblock .repcontainer[data-groupname='repeating_spell']{
     width:100%;
 }
-.sheet-attr-total-container {
+.sheet-button-description .sheet-attr-total-container {
     overflow: hidden;
     white-space: nowrap;
 }
