--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -166,6 +166,13 @@ div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn 
     display: none;    
 }
 
+.charsheet div.sheet-skills6 {
+    display: none;    
+}
+
+.charsheet div.sheet-skills7 {
+    display: none;    
+}
 
 .sheet-showskills[value="1"]:checked ~ div.sheet-skills1 {
     display: block;
@@ -187,6 +194,13 @@ div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn 
     display: block;
 }
 
+.sheet-showskills[value="6"]:checked ~ div.sheet-skills6 {
+    display: block;
+}
+
+.sheet-showskills[value="7"]:checked ~ div.sheet-skills7 {
+    display: block;
+}
 
 .sheet-HideConfig:checked ~ *.sheet-config {
 	display:none;
@@ -261,8 +275,8 @@ input[type=checkbox].sheet-arrow  {
 /* -------------------------------Headers Coloring------------------------------------------- */
 
 .sheet-showskills[value="1"]:checked ~ h4.sheet-section-head {
-    background-image: linear-gradient(black, #563b00);
-    background-color: #563b00;
+    background-image: linear-gradient(black, #840032);
+    background-color: #840032;
     color: white;
     text-align: center;
     font-weight: normal;
@@ -303,6 +317,26 @@ input[type=checkbox].sheet-arrow  {
 .sheet-showskills[value="5"]:checked ~ h4.sheet-section-head {
     background-image: linear-gradient(black, #6B5A38);
     background-color: #6B5A38;
+    color: white;
+    text-align: center;
+    font-weight: normal;
+    font-style: normal;
+    border: 1px solid black;
+}
+
+.sheet-showskills[value="6"]:checked ~ h4.sheet-section-head {
+    background-image: linear-gradient(black, #31657b);
+    background-color: #31657b;
+    color: white;
+    text-align: center;
+    font-weight: normal;
+    font-style: normal;
+    border: 1px solid black;
+}
+
+.sheet-showskills[value="7"]:checked ~ h4.sheet-section-head {
+    background-image: linear-gradient(black, #65356f);
+    background-color: #65356f;
     color: white;
     text-align: center;
     font-weight: normal;
