--- a/Starfinder (simple)/Starfinder (simple).css
+++ b/Starfinder (simple)/Starfinder (simple).css
@@ -73,7 +73,8 @@ input.sheet-tab3:checked ~ div.sheet-tab3,
 input.sheet-tab4:checked ~ div.sheet-tab4,
 input.sheet-tab5:checked ~ div.sheet-tab5,
 input.sheet-tab6:checked ~ div.sheet-tab6,
-input.sheet-tab7:checked ~ div.sheet-tab7, {
+input.sheet-tab7:checked ~ div.sheet-tab7,
+input.sheet-tab8:checked ~ div.sheet-tab8, {
     display: block;
 }
 
@@ -123,7 +124,7 @@ div.sheet-tab-content {
 }
 
 .sheet-center {
-    margin-left:auto; 
+    margin-left:auto;
     margin-right:auto;
 }
 
@@ -216,7 +217,7 @@ hr {
 .sheet-table-row1 {
     display:table-row;
     vertical-align:bottom;
-    width:100%;    
+    width:100%;
 }
 
 .sheet-table-row-name {
@@ -312,7 +313,7 @@ button:active
 .sheet-rolltemplate-pf_check .sheet-tcat {
 	font-weight: bold;
 }
- 
+
 .sheet-rolltemplate-pf_check .sheet-content {
     color: #E0E0E0;
 	    padding: 10px 10px 10px 15px;
@@ -337,17 +338,17 @@ button:active
     	background-color: transparent;
     	border: none;
 }
- 
+
 .sheet-rolltemplate-pf_check .inlinerollresult.fullcrit {
 	color: #3FB315;
     	border: none;
 }
- 
+
 .sheet-rolltemplate-pf_check .inlinerollresult.fullfail {
 	color: #B31515;
     	border: none;
 }
- 
+
 .sheet-rolltemplate-pf_check .inlinerollresult.importantroll {
 	color: #4A57ED;
     	border: none;
@@ -377,17 +378,17 @@ button:active
     font-size: 1em;
     font-style: italic;
 }
- 
+
 .sheet-rolltemplate-pf_attack .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
 	border-left: 180px solid #E0E0E0;
 }
- 
+
 .sheet-rolltemplate-pf_attack .sheet-tcat {
     font-style: italic;
 }
- 
+
 .sheet-rolltemplate-pf_attack td {
     background:url(https://i.imgur.com/5pNLmnK.png) repeat-y;
     background-size: 100%;
@@ -411,19 +412,19 @@ button:active
     background-color: transparent;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_attack .inlinerollresult.fullcrit {
     background-color: transparent;
 	color: #3FB315;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_attack .inlinerollresult.fullfail {
     background-color: transparent;
 	color: #B31515;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_attack .inlinerollresult.importantroll {
     background-color: transparent;
 	color: #4A57ED;
@@ -448,17 +449,17 @@ button:active
 	font-family: "Arial", Helvetica, sans-serif;
     text-transform: uppercase;
 }
- 
+
 .sheet-rolltemplate-pf_spell .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
 	border-left: 180px solid #E0E0E0;
 }
- 
+
 .sheet-rolltemplate-pf_spell .sheet-tcat {
     font-weight: bold;
 }
- 
+
 .sheet-rolltemplate-pf_spell td {
     background:url(https://i.imgur.com/5pNLmnK.png) repeat-y;
     background-size: 100%;
@@ -482,17 +483,17 @@ button:active
     background-color: transparent;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_spell .inlinerollresult.fullcrit {
 	color: #3FB315;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_spell .inlinerollresult.fullfail {
 	color: #B31515;
     border: none;
 }
- 
+
 .sheet-rolltemplate-pf_spell .inlinerollresult.importantroll {
 	color: #4A57ED;
     border: none;
