BTATOW Fixed CSS and HTML to get all the skills displaying properly.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -14,13 +14,19 @@ input.sheet-tab4:checked ~ div.sheet-tab4 {
 }
 
 .sheet-main {
+    color: black;
     font-family: Eurostile-LT-Std-Demi, Eurostile-LT-Std-Demi-backup, monospace;
     font-size: 10pt;
     min-width: 800px;
 }
 
-.sheet-skills-headings span {
+.sheet-skills-headings {
     font-weight: bold;
+    text-align: center;
+}
+
+.sheet-skills-headings.sheet-left {
+    text-align: left;
 }
 
 .sheet-skills-container {
@@ -28,26 +34,78 @@ input.sheet-tab4:checked ~ div.sheet-tab4 {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    max-height: 30px;
+    height: 20px;
+    max-height: 20px;
 }
 
 .sheet-skills {
+    margin: 1px 2px;
+    padding: 0;
+}
+
+button[type=roll].sheet-skill-roll {
+    background: none;
+    border: none;
+    border-image: none;
+    border-radius: 0;
+    box-shadow: none;
+    color: black;
+    display: flex;
+    font-size: 10pt;
+    margin: 0;
+    padding: 0;
+}
+
+button[type=roll].sheet-skill-roll::before {
+    content: none;
+}
+
+.sheet-skills.sheet-content {
     border-color: #000000;
     border-radius: 0;
     border-style: none none solid;
     border-width: thin;
-    margin: 0 2px;
-    padding: 0;
+    color: black;
+}
+
+.sheet-skill {
+    flex-grow: 1;
+}
+
+.sheet-skills-skill-level {
+    width: 20px;
+}
+
+.sheet-skills-linked-attributes {
+    width: 66px;
+}
+
+.sheet-skills-modifier {
+    width: 22px;
+}
+
+.sheet-skills-tnc {
+    width: 32px;
+}
+
+.sheet-skills-xp, input[type=number].sheet-skills-xp {
+    width: 26px;
 }
 
 select.sheet-skills::-ms-expand {
     display: none;
 }
 
-select.sheet-skills, input[type=number].sheet-skills {
+select.sheet-skills {
     height: auto;
     -moz-appearance: none;
     -webkit-appearance: none;
+}
+
+input[type=number].sheet-skills::-webkit-inner-spin-button,
+input[type=number].sheet-skills::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 span.sheet-skills, input.sheet-skills, select.sheet-skills {
