--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -2607,7 +2607,7 @@ input[type=checkbox].sheet-class-spells:checked + .sheet-spellclass-container,
 .sheet-statblock .repcontainer[data-groupname='repeating_spell']{
     width:100%;
 }
-.sheet-button-description .sheet-attr-total-container {
+.sheet-attr-total-container {
     overflow: hidden;
     white-space: nowrap;
 }
@@ -3764,7 +3764,7 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
 }
 .sheet-data-frame{
     display:grid;
-    grid-template-columns:1fr 1.75fr;
+    grid-template-columns:306px 1fr;
     grid-gap:10px;
     min-height:300px;
 }
@@ -3777,11 +3777,12 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
     z-index:100;
 }
 .sheet-slide-container > .sheet-mancer-button-container{
-    display:flex;
-    justify-content:space-between;
-    position:sticky;
-    background-color:white;
-    bottom:-1px;
+    display: flex;
+    justify-content: space-around;
+    position: sticky;
+    background-color: white;
+    bottom: -1px;
+    padding: 5px 0px 0px;
 }
 .sheet-mancernav{
     display: inline-flex;
@@ -3820,6 +3821,7 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
 .sheet-slide-container.sheet-pc-feat .sheet-image-button-holder > .sheet-section.sheet-pc-feat,
 .sheet-slide-container.sheet-pc-equipment .sheet-image-button-holder > .sheet-section.sheet-pc-equipment,
 .sheet-image-button-holder > .sheet-section:hover,
+.sheet-slide-container > .sheet-image-button-holder > .sheet-section,
 .sheet-class-view[value*='1'] ~ .sheet-image-button-holder > .sheet-class-1,
 .sheet-class-view[value*='2'] ~ .sheet-image-button-holder > .sheet-class-2,
 .sheet-class-view[value*='3'] ~ .sheet-image-button-holder > .sheet-class-3,
@@ -3834,7 +3836,7 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
 .sheet-mancernav > .sheet-section {
     margin-right: -10px;
 }
-.sheet-image-button-holder > .sheet-section {
+:not(.sheet-slide-container) > .sheet-image-button-holder > .sheet-section {
     padding: 2px 5px 0px;
     top: -12px;
     position: relative;
@@ -3850,6 +3852,7 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
 .sheet-slide-container .sheet-charmancerrow.sheet-choice-showing{
     display: flex;
     justify-content:space-around;
+    flex-wrap: wrap;
     margin: 0px 0px 10px;
 }
 .sheet-slide-container .sheet-data-frame .sheet-charmancerrow{
@@ -3861,6 +3864,12 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
 .sheet-slide-container .sheet-stat-container > *:first-child {
     border-right:1px solid black;
     padding-right:5px;
+}
+.sheet-charmancerrow > span:first-child {
+    white-space: nowrap;
+}
+.sheet-charmancerrow > span:not(:first-child) {
+    text-align: end;
 }
 .sheet-charmancerrow .sheet-attribute-container {
     display: grid;
