--- a/carbon-2185-quickstart/carbon2185quickstart.css
+++ b/carbon-2185-quickstart/carbon2185quickstart.css
@@ -54,7 +54,7 @@
 }
 .sheet-contain {
 	border: 1px solid black;
-	padding: 5px;
+	padding: 10px;
 }
 .sheet-allt {
 	text-align: left;
@@ -92,6 +92,7 @@
 .sheet-w35 { width: 35%; }
 .sheet-w40 { width: 40%; }
 .sheet-w45 { width: 45%; }
+.sheet-w50 { width: 50%; }
 .sheet-w60 { width: 60%; }
 .sheet-w80 { width: 80%; }
 .sheet-w85 { width: 85%; }
@@ -117,4 +118,7 @@ td { text-align: center; }
 }
 .sheet-inpcntr {
     text-align: center;
+}
+td {
+    text-align: left;
 }
