Pathfinder by Roll20 v1.3
* New feature: Temporary bonus and buff ability for Spell Resistance
* New feature: Distinct temporary bonuses and buff abilities for Melee and Ranged damage (on top of general temp damage bonus)
* New feature: Critical confirmation bonus

--- a/Pathfinder by Roll20/sources/Pathfinder Official.css
+++ b/Pathfinder by Roll20/sources/Pathfinder Official.css
@@ -922,13 +922,19 @@ div.sheet-boxed input[type="text"].sheet-expbuff {
 .sheet-identity input[type="number"],
 .sheet-attacks input[type="number"],
 .sheet-spells input[type="number"],
-.sheet-statblock input[type="number"].sheet-medium {width: 35px;}
+.sheet-statblock input[type="number"].sheet-medium {
+    width: 35px;
+}
+
 .sheet-acitem input[type="number"]
 , .sheet-acitem input[type="text"].sheet-nbr {
     width: 28px;
     text-align: center;
 }
-.sheet-spells input[type="number"].sheet-sml {width: 25px;}
+.sheet-spells input[type="number"].sheet-sml
+, .sheet-attacks input[type="number"].sheet-sml {
+    width: 25px;
+}
 .sheet-skill input[type="number"],
 .sheet-spellcasting input[type="number"] {width: 30px;}
 
