--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -876,7 +876,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 
 .sheet-weapons-grid {
   display: grid;
-  grid-template-columns: 2.5em auto 4em 6em 4em 4em 6em auto;
+  grid-template-columns: 2.5em auto 4em 6em 4em 4em 4em 6em auto;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 0 0 2px 0;
@@ -884,7 +884,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 
 .sheet-weapons-box {
   grid-row-start: 1;
-  grid-column: 1/9;
+  grid-column: 1/10;
 }
 
 .sheet-weapons-box1 {
@@ -928,14 +928,18 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 }
 
 .sheet-weapons-box9 {
-  grid-row-start: 2;
-  grid-column: 1/9;
+  grid-row-start: 1;
+  grid-column-start: 9;
 }
 
 .sheet-weapons-box10 {
-  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-column: 1/10;
 }
 
+.sheet-weapons-box11 {
+  grid-column-start: 1;
+}
 /* ---------------------------------- Dice Pool */
 
 .sheet-dice_pool-grid {
@@ -1104,7 +1108,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 /* ---------------------------------- Shield */
 .sheet-shield-grid {
   display: grid;
-  grid-template-columns: auto 3em;
+  grid-template-columns: auto 3em 3em;
   grid-template-rows: max-content;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
@@ -1112,7 +1116,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 
 .sheet-shield-box {
   grid-row-start: 1;
-  grid-column: 1/3;
+  grid-column: 1/4;
 }
 
 .sheet-shield-box1 {
@@ -1126,8 +1130,13 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 }
 
 .sheet-shield-box3 {
+  grid-row-start: 1;
+  grid-column: 3;
+}
+
+.sheet-shield-box4 {
   grid-row-start: 2;
-  grid-column: 1/3;
+  grid-column: 1/4;
 }
 
 /* ---------------------------------- Consumables */
