improve roll template

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -931,13 +931,13 @@
 			.sheet-attr-select option:nth-of-type(1n+5) {color: #610b0d;}
 			.sheet-attr-select option:nth-of-type(1n+9) {color: #7a2593;}
 
-		/***** SKILLS REPEATING SECTION *****/
-			.sheet-skill-box .sheet-settings input[type="text"], 
+		/***** SKILLS REPEATING SECTION *****/ 
 			.sheet-skills-row .sheet-settings-row div {
 				width: 70%;}
 
 			.sheet-skill-box .sheet-name,
-			.sheet-skill-box select.sheet-skill-select {
+			.sheet-skill-box select.sheet-skill-select,
+			.sheet-skill-box .sheet-settings input[type="text"] {
 				width: 50%;}
 
 			.sheet-skill-box .sheet-settings input[type="text"] {text-align: left;}
