--- a/Mekton Z/Mekton Zeta.css
+++ b/Mekton Z/Mekton Zeta.css
@@ -2,13 +2,14 @@
 
 .charsheet {
     background: white; 
+    width:830px;
 }
 
 /*----------- Tabs Setup -------------*/
 
 div.sheet-core-content {
     display: none; 
-    width:840px;
+    width:100%;
 }
 
 .charsheet div[class^="sheet-section"] {     
@@ -142,7 +143,55 @@ input.sheet-tab99:checked::before {
     height:105px;
     border: 1px solid black;
 }
-
+.charsheet .sheet-row {
+    height: 28px;
+    margin: 0 0 2px;
+}
+.charsheet .sheet-item {
+	display: inline-block;
+	width: 100%;
+	height: 28px;
+	vertical-align: middle;
+	margin: 0px;
+	text-align: left;
+	padding: 3px 2px;
+}
+.sheet-full_width {
+    width:100%;
+}
+.sheet-half_width {
+    width:50%;
+}
+.sheet-quarter_width {
+    width:25%;
+}
+.sheet-390 {
+    width:390px;
+}
+.sheet-black_background {
+    color:white;
+    background:black;
+    border: 1px solid black;
+    font-variant: small-caps;
+}
+.sheet-100 {
+    width:100px;
+}
+.sheet-80 {
+    width:80px;
+}
+.sheet-60 {
+    width:60px;
+}
+.sheet-50 {
+    width:50px;
+}
+.sheet-40 {
+    width:40px;
+}
+.sheet-30 {
+    width:30px;
+}
 /* ===== Text ======*/
 table.sheet-black {
     width:100%;
@@ -154,7 +203,6 @@ table.sheet-black th {
     border: 1px solid black;
     font-variant: small-caps;
 }
-
 table.sheet-black.sheet-blue th {
     color:white;
     background:blue;
@@ -193,8 +241,8 @@ table.sheet-black td.sheet-thickbottom {
     text-align:center;
     background:white;
     border:none;
-    width:300px;
     box-shadow:none;
+    width:100%;
 }
 
 input:focus,
@@ -206,7 +254,7 @@ input:focus,
 }
 
 textarea.sheet-table_input {
-    width:98.5%;
+    width:calc(100% - 10px);
     resize:vertical;
     box-shadow:none;
     border:none;
@@ -218,11 +266,11 @@ textarea.sheet-table_input:focus {
     font-weight:700;
 }
 
-.sheet-table_input[type="number"] {
+.charsheet input.sheet-table_input[type="number"] {
     text-align:center;
     background:white;
     border:none;
-    width:40px;
+    width:100%;
     box-shadow:none;
 }
 
@@ -830,6 +878,41 @@ input.sheet-bolt[type="checkbox"]:checked + span::before {
     color:white;
 }
 
+/* -----Fake radio1----- */
+input.sheet-radio1[type="radio"] {
+    opacity: 0;
+    width: 50px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 3;
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
+/* -----Fake gear----- */
+
+input.sheet-radio1[type="radio"] + span::before {
+    width: 50px;
+    height: 18px;
+    position: relative;
+    top: -18px;
+    left: 0px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    font-family:"Pictos";
+    content: " ";
+    border: 1px dotted gray;
+    border-radius:4px;
+    margin-bottom:-10px;
+    padding:0px;
+}
+
+input.sheet-radio1[type="radio"]:checked + span::before {
+    content: "3";
+}
+input.sheet-radio1[type="radio"]:focus {outline:0;} 
 /*----  general ----*/
 .sheet-rolltemplate-skill-general table {
     width: 100%;
