Shadowrun 5th Edition v1.6 (#5068)
* Add limits to roll template

* Update version 1.6

* improve roll template

* add new translations

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -910,9 +910,9 @@
 			width  : 100%;}
 
 	/***** SKILLS *****/
-		.sheet-skill-box h3:first-child {margin-right: 67%;}
-
-		.sheet-skill-box h3:last-child {margin-left: 30px;}
+		.sheet-skill-box h3[data-i18n="skill"] {margin-right: 47%;}
+		.sheet-skill-box h3[data-i18n="attribute"] {margin-left: 4%;}
+		.sheet-skill-box h3[data-i18n="limit"] {margin-left: 8%;}
 
 		.sheet-skill-box label {
 			display       : inline-block;
@@ -920,18 +920,25 @@
 			text-transform: capitalize;}
 
 		select.sheet-attr-select {
-			position: absolute;
+			position: absolute;}
+
+		select.sheet-attr-select[name="attr_attribute"] {
+			left    : 62%;}
+
+		select.sheet-attr-select[name="attr_limit"] {
 			left    : 82%;}
 
 			.sheet-attr-select option:nth-of-type(1n+5) {color: #610b0d;}
 			.sheet-attr-select option:nth-of-type(1n+9) {color: #7a2593;}
 
-		/***** SKILLS REPEATING SECTION *****/
-			.sheet-skill-box .sheet-settings input[type="text"],
-			.sheet-skill-box select.sheet-skill-select,
-			.sheet-skills-row .sheet-settings-row div,
-			.sheet-skill-box .sheet-name {
+		/***** SKILLS REPEATING SECTION *****/ 
+			.sheet-skills-row .sheet-settings-row div {
 				width: 70%;}
+
+			.sheet-skill-box .sheet-name,
+			.sheet-skill-box select.sheet-skill-select,
+			.sheet-skill-box .sheet-settings input[type="text"] {
+				width: 50%;}
 
 			.sheet-skill-box .sheet-settings input[type="text"] {text-align: left;}
 
