Forbidden Lands v1.2 - carry calc fix, pack rat option
- fixed carry calc (should use base strength, not damaged strength)
- added pack rat talent option that adjusts carry amount

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -1269,6 +1269,22 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-column-start: 4;
 }
 
+.sheet-gear-box11 {
+  grid-row-start: 5;
+  grid-column: 1/5;
+}
+
+.sheet-gear-subgrid2 {
+  display: grid;
+  grid-template-columns: 8em 8em;
+  grid-column-gap: 2px;
+  margin-top: 2px;
+}
+
+.sheet-gear-box12 {
+  margin-top: 7px;
+}
+
 /* ---------------------------------- Mount */
 
 .sheet-mount-grid {
