--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -38,7 +38,7 @@ div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn 
 .charsheet .repcontrol_edit,
 .charsheet .repcontrol_del {
     display: block;
-    background: #000;
+    background: #7c746a;
     color: white;
     box-shadow:none;
     font-size:0.7em;
