Added Initiative Option
New checkbox for selection between deluxe and classic versions of initiative rolling. Default is Deluxe.

--- a/Low Fantasy Gaming/LFGSheet.css
+++ b/Low Fantasy Gaming/LFGSheet.css
@@ -301,13 +301,14 @@ input.sheet-luckchacheck:checked ~ div.sheet-luckcheck-cha {
 	display: block;
 }
  div.sheet-section-oldinit {
-	display: none;
-}
- input.sheet-oldinit:not(:checked) ~ div.sheet-section-newinit {
 	display: block;
 }
- input.sheet-oldinit:checked ~ div.sheet-section-oldinit {
- 	display: block;
+
+ input.sheet-newinit:not([value='0']) ~  div.sheet-section-oldinit {
+	display: none;
+}
+ input.sheet-newinit:not([value='1']) ~  div.sheet-section-newinit {
+ 	display: none;
 }
 /* END Choose Init Method */
 
