Add buttons to weapons

--- a/ShadowrunAnarchy/ShadowrunAnarchy.css
+++ b/ShadowrunAnarchy/ShadowrunAnarchy.css
@@ -957,11 +957,15 @@ span.sheet-skillname:hover {
 	width: 100%;
 }
 
+div.sheet-display div.sheet-weaponheader button[type="roll"] {
+	font-size: 1em;
+}
+
 .sheet-display .sheet-weaponheader div.sheet-weaponslabel {
 	width: 100%;
 }
 
-.sheet-weaponheader span:last-child {
+.sheet-weaponheader span[name="attr_weapon_type"] {
 	font-size: 0.7em;
 	font-weight: normal;
 }
